...
        android:text="How are you feeling?"
        android:textColor="#001219"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_mood"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_background" />

    <TextView
...
        android:text="Description for Mood Event"
        android:textColor="#001219"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#001219"
        android:fontFamily="@font/itim_regular"
...
        android:text="#moods"
        android:textColor="#001219"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_hashtags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#001219"
        android:fontFamily="@font/itim_regular"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_emoji_picker"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#001219"
...
            android:textColor="#001219"
            android:textSize="16sp"
            android:theme="@style/privateSwitch"
            app:trackTint="#66001219" />

        <Button
            android:id="@+id/btn_post"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="#001219"
            android:fontFamily="@font/itim_regular"
            android:insetTop="4dp"
            android:insetBottom="4dp"
...
            android:text="Post"
            android:textColor="#E9D8A6"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnDeletePost"
            android:layout_width="50dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#001219"
...
