...
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/profile_button"
        android:contentDescription="Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/nav_home"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nav_add"
...
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/notification_button"
        android:contentDescription="Notifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav_search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/nav_add"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nav_search"
...
